<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/history_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/colorDark50"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:contentPadding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_white"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buyhistory_orderid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/orderno_string"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buyhistory_orderstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/history_process_string"
                android:textColor="@color/app_green"
                android:textSize="@dimen/font_huge"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/buyhistory_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/history_time_string"
            android:textColor="@color/app_hint2"
            android:textSize="@dimen/font_xl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buyhistory_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pricesum_string"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/font_xxxl" />

            <Button
                android:id="@+id/history_more"
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_down_arrow"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:text="@string/history_description_string"
                    android:textColor="@color/colorDark"
                    android:textSize="@dimen/font_xxl"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:padding="2dp"
                        android:text="@string/history_name_string"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorDark75"
                        android:textSize="@dimen/font_xxxl" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="2dp"
                        android:text="@string/unit_unit_string"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorDark75"
                        android:textSize="@dimen/font_xxxl" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="2dp"
                        android:text="@string/history_price_string"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorDark75"
                        android:textSize="@dimen/font_xxxl" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/buyhistory_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_drop_shadow" />

                <TextView
                    android:id="@+id/buyhistory_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    android:text="@string/ice_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_xl" />

                <TextView
                    android:id="@+id/buyhistory_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/servicecharge_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_xl" />

                <TextView
                    android:id="@+id/buyhistory_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/delivery_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_xl" />

                <TextView
                    android:id="@+id/buyhistory_vat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/vat_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_xl" />


                <TextView
                    android:id="@+id/buyhistory_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/discount_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_xl" />

                <TextView
                    android:id="@+id/buyhistory_subtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/history_sub_price_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_xl" />

                <TextView
                    android:id="@+id/buyhistory_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/pricesum_string"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/app_green"
                    android:textSize="@dimen/font_xxxl"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/bg_drop_shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_address_string"
                    android:textColor="@color/colorDark" />

                <TextView
                    android:id="@+id/buyhistory_address_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_name_string"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_m" />

                <TextView
                    android:id="@+id/buyhistory_address_mbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_mobile_title"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_m" />

                <TextView
                    android:id="@+id/buyhistory_address_village"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_address1_string"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_m" />

                <TextView
                    android:id="@+id/buyhistory_address_road"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_area_string"
                    android:textColor="@color/app_hint2"
                    android:textSize="@dimen/font_m" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>