<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:contentPadding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_red_border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/address_primary_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:contentDescription="@string/submit_string"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_location_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/address_home1_string"
                    android:textColor="@color/colorDark"
                    android:textSize="@dimen/font_xxxl" />

                <ImageView
                    android:id="@+id/address_update"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_edit"
                    android:tint="@color/colorDark" />
            </LinearLayout>

            <TextView
                android:id="@+id/address_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_name_string"
                android:textColor="@color/app_hint2" />

            <TextView
                android:id="@+id/address_mbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_mobile_title"
                android:textColor="@color/app_hint2" />

            <TextView
                android:id="@+id/address_village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_address1_string"
                android:textColor="@color/app_hint2" />
            <TextView
                android:id="@+id/address_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_road_string"
                android:textColor="@color/app_hint2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address_road"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/address_area_string"
                    android:textColor="@color/app_hint2" />

                <ImageView
                    android:id="@+id/address_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_minus"
                    android:tint="@color/app_red" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>